main.css
* {
  box-sizing: border-box;
}

*::selection {
  background-color: lightsalmon;
  color: black;
}

html {
  color: #111;
  font-family: Charter, "Bitstream Charter", "Sitka Text", Cambria, P052, serif;
  font-size: 16px;
  padding: 0;
}

@media screen and (min-width: 768px) {
  html {
    font-size: 18px;
  }
}

body {
  padding: 1rem;
  margin: 0 auto;
  position: relative;
}

body::after {
  content: "";
  display: block;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100vw;
  height: 100%;
  background-image: linear-gradient(180deg, transparent 0%, white 100%);
  z-index: -1;
}

@media screen and (min-width: 768px) {
  body {
    padding-left: 2rem;
    padding-top: 1rem;
  }

  body::after {
    content: none;
  }
}

.first-load {
  header,
  main {
    opacity: 1;
    transition: opacity 1s 500ms;

    @starting-style {
      opacity: 0;
    }
  }

  main {
    transition-delay: 0.25s;
  }
}

header {
  position: relative;
  z-index: 1;
}

@view-transition {
  navigation: auto;
  animation-duration: 500ms;
}

header h1 {
  view-transition-name: h1;
  /*animation:
    heading-fun 16161ms step-end infinite,
    heading-more-fun 18181ms step-end infinite;*/
  scale: 1 2;
  /*mix-blend-mode: color-burn;*/
  font-size: 4.5rem;
  font-family:
    "Iowan Old Style", "Palatino Linotype", "URW Palladio L", P052, serif;
  font-weight: normal;
  letter-spacing: -0.1ch;
  margin: 0 0 2rem;
  display: flex;
  gap: 1ch;
  height: 0.9em;
  translate: -0.2ch 50%;
  text-shadow:
    0 0 5px #0008,
    0 0 20px #0006,
    0 0 50px #0003;
}

@media screen and (min-width: 768px) {
  header h1 {
    text-align: left;
    font-size: 5rem;
    margin: 1rem 0 1rem;
    height: 1.25em;
  }
}

@media screen and (min-width: 1100px) {
  header h1 {
    font-size: 8rem;
  }
}

@media screen and (min-width: 1400px) {
  header h1 {
    font-size: 10rem;
  }
}

main {
  margin-top: 1rem;
  display: grid;
  gap: 1rem;
  line-height: 1.5;
  z-index: 1;
}

p,
ul {
  hyphens: auto;
}

section {
  background: #ffffffa0;
  border: none;
  box-shadow:
    0 0 5px #0001,
    0 0 30px #0001,
    0 0 50px #0001;
  transition:
    box-shadow 750ms,
    scale 750ms;
}

section:not(:first-of-type):hover {
  background: #ffffffdd;
  box-shadow:
    0 0 5px #0003,
    0 0 30px #0003,
    0 0 50px #0003;
}

section:not(:first-of-type):hover ::selection {
  background: rgb(5, 127, 136);
  color: white;
}

.intro > :first-child {
  margin: 2rem 0 0;
}

@media screen and (min-width: 768px) {
  .intro > :first-child {
    margin: 1rem 0 0;
  }
}

.intro :last-child {
  margin: auto 0 0;
}

.intro {
  padding: 1rem;
  line-height: 1.5;
  display: flex;
  flex-direction: column;
}

.intro ul {
  list-style-position: outside;
  padding-left: 1rem;
}

@media screen and (min-width: 768px) {
  main {
    animation-delay: 0s;
    margin-top: 0;
    grid-template-columns: repeat(2, 1fr);
  }

  .intro {
    padding: 2rem;
    grid-column: span 2;
  }
}

@media screen and (min-width: 1000px) {
  main {
    grid-template-columns: repeat(4, 1fr);
  }
}

#bg,
#overlay {
  height: 100vh;
  left: 0;
  position: fixed;
  top: 0;
  width: 100vw;
}

#bg {
  z-index: -1;
}

#overlay {
  z-index: 1;
  pointer-events: none;
  mix-blend-mode: plus-lighter;
}

h1,
h2 {
  line-height: 1;
}

h1 {
  margin: 0;
}

#logo {
  display: block;
}

@media screen and (min-width: 768px) {
  #logo {
    min-width: 500px;
  }
}

.subtitle {
  font-size: 1.5rem;
  line-height: 1;
  letter-spacing: 1px;
  margin: 0.5rem 0 0;
  opacity: 0.8;
  text-align: center;
}

@media screen and (min-width: 768px) {
  .subtitle {
    text-align: left;
  }
}

.links {
  list-style-type: none;
  display: flex;
  gap: 0.5rem;
  margin: 1.5rem 0 0;
  padding: 0;
  justify-content: center;
  flex-wrap: wrap;
}

@media screen and (min-width: 768px) {
  .links {
    justify-content: start;
  }
}

.links__item,
.work__tag {
  background: #111;
  color: white;
  line-height: 2;
  padding: 0 0.5rem;
  white-space: nowrap;
  font-family:
    ui-monospace, "Cascadia Code", "Source Code Pro", Menlo, Consolas,
    "DejaVu Sans Mono", monospace;
}

.links__item:hover {
  background: salmon;
  color: black;
}

a,
a:visited {
  color: inherit;
  text-decoration: none;
}

.services li + li {
  margin-top: 0.1rem;
}

.work__image,
.article__image {
  display: block;
  width: 100%;
}

.work__image {
  object-fit: cover;
  aspect-ratio: 5 / 3;
}

.work__info {
  padding: 1rem;
}

.work__title {
  margin: 0 0 0.25rem;
}

.work__subtitle {
  margin: 0 0 1rem;
}

.work__tags {
  list-style-type: none;
  display: flex;
  flex-wrap: wrap;
  gap: 0.25rem;
  margin: 0;
  padding: 0;
  font-size: 14px;
}

.testimonial {
  padding: 1rem;
  margin: 0;
}

.testimonial__text {
  font-weight: 500;
  margin: 0;
}

.testimonial__text::before {
  content: "\201C";
}

.testimonial__text::after {
  content: "\201D";
}

.testimonial__source {
  text-align: right;
}

.testimonial__source::before {
  content: "\002014\000020";
}

footer {
  font-size: 14px;
  margin-top: 2rem;
  grid-column: span 2;
  z-index: 1;
  position: relative;
  text-align: center;
}

footer a {
  font-weight: bold;
}

.back-link {
  display: block;
  position: fixed;
  top: 1rem;
  left: 1rem;
  font-family: monospace;
  font-weight: bold;
  text-transform: uppercase;
}

.back-link:hover {
  color: salmon;
}

